--- a/pdok_apps.conf
+++ b/pdok_apps.conf
@@ -36,3 +36,14 @@ Alias /publiek/vegetatielegger "/apps/geoservices/apps/vegetatielegger"
   Allow from all
   AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript application/json
 </Directory>
+
+Alias /publiek/kustlijnkaart "/apps/geoservices/apps/kustlijnkaart"
+
+<Directory "/apps/geoservices/apps/kustlijnkaart/">
+  DirectoryIndex index.html
+  AllowOverride None
+  Options FollowSymLinks Multiviews
+  Order allow,deny
+  Allow from all
+  AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript application/json
+</Directory>
