--- a/pdok_apps.conf
+++ b/pdok_apps.conf
@@ -37,9 +37,9 @@ Alias /publiek/vegetatielegger "/apps/geoservices/apps/vegetatielegger"
   AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript application/json
 </Directory>
 
-Alias /publiek/kustlijnkaart "/apps/geoservices/apps/kustlijnkaart"
+Alias /publiek/applicaties "/apps/geoservices/apps/pdokapps"
 
-<Directory "/apps/geoservices/apps/kustlijnkaart/">
+<Directory "/apps/geoservices/apps/pdokapps/">
   DirectoryIndex index.html
   AllowOverride None
   Options FollowSymLinks Multiviews
